salesforce-simple-trigger-template/main/default/objects/Trigger_Setting__mdt/fields/AFTER_DELETE_DISABLED__c.field-meta.xml
<CustomField>
    <fullName>AFTER_DELETE_DISABLED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AFTER DELETE DISABLED</label>
    <type>Checkbox</type>
</CustomField>