salesforce-simple-trigger-template/main/default/objects/Trigger_Setting__mdt/fields/AFTER_UPDATE_DISABLED__c.field-meta.xml
<CustomField>
    <fullName>AFTER_UPDATE_DISABLED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AFTER UPDATE DISABLED</label>
    <type>Checkbox</type>
</CustomField>