salesforce-simple-trigger-template/main/default/objects/Trigger_Setting__mdt/fields/BEFORE_DELETE_DISABLED__c.field-meta.xml
<CustomField>
    <fullName>BEFORE_DELETE_DISABLED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BEFORE DELETE DISABLED</label>
    <type>Checkbox</type>
</CustomField>