salesforce-simple-trigger-template/main/default/objects/Trigger_Setting__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Trigger_Settings</relationshipLabel>
    <relationshipName>Trigger_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>