salesforce-simple-trigger-template/main/default/objects/Trigger_Setting__mdt/listViews/All_Trigger_Settings.listView-meta.xml
<ListView>
    <fullName>All_Trigger_Settings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Object__c</columns>
    <columns>AFTER_INSERT_DISABLED__c</columns>
    <columns>AFTER_UPDATE_DISABLED__c</columns>
    <columns>AFTER_DELETE_DISABLED__c</columns>
    <columns>AFTER_UNDELETE_DISABLED__c</columns>
    <columns>BEFORE_INSERT_DISABLED__c</columns>
    <columns>BEFORE_UPDATE_DISABLED__c</columns>
    <columns>BEFORE_DELETE_DISABLED__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Trigger Settings</label>
    <language>en_US</language>
</ListView>